; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_loadrom.c_deinterleave_block.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_loadrom.c_deinterleave_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @deinterleave_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deinterleave_block(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca [16384 x i32], align 16
  store i32* %0, i32** %2, align 8
  %5 = getelementptr inbounds [16384 x i32], [16384 x i32]* %4, i64 0, i64 0
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @memcpy(i32* %5, i32* %6, i32 16384)
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %34, %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 8192
  br i1 %10, label %11, label %37

11:                                               ; preds = %8
  %12 = load i32, i32* %3, align 4
  %13 = add nsw i32 8192, %12
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds [16384 x i32], [16384 x i32]* %4, i64 0, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* %3, align 4
  %19 = mul nsw i32 %18, 2
  %20 = add nsw i32 %19, 0
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %17, i64 %21
  store i32 %16, i32* %22, align 4
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 0, %23
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [16384 x i32], [16384 x i32]* %4, i64 0, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %2, align 8
  %29 = load i32, i32* %3, align 4
  %30 = mul nsw i32 %29, 2
  %31 = add nsw i32 %30, 1
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %28, i64 %32
  store i32 %27, i32* %33, align 4
  br label %34

34:                                               ; preds = %11
  %35 = load i32, i32* %3, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %3, align 4
  br label %8

37:                                               ; preds = %8
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
